src/objects/ssv4__Repo__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <fields>
        <fullName>ssv4__Type__c</fullName>
        <inlineHelpText>Type of Repo</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BitBucket</fullName>
                    <default>true</default>
                    <label>BitBucket</label>
                </value>
                <value>
                    <fullName>Git</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ssv4__pass__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__uName__c</fullName>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Repo</label>
    <listViews>
        <fullName>ssv4__All</fullName>
        <columns>NAME</columns>
        <columns>ssv4__Type__c</columns>
        <columns>ssv4__uName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ssv4__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Repo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>